# GeometryDemo

./: .gitignore  GeometryDemo.cabal  README.md
src/: Bad01.hs  Bad02.hs  Good.hs  Main.hs  Math.hs  README.md
