name:                GeometryDemo
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/GeometryDemo#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable Good
  hs-source-dirs:      src
  main-is:             Good.hs
  other-modules:       Math
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , tasty
                     , tasty-hunit

executable Bad
  hs-source-dirs:      src
  main-is:             Bad.hs
  other-modules:       Math
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , tasty
                     , tasty-hunit